crates/ruff/src/rules/flake8_executable/snapshots/ruff__rules__flake8_executable__tests__EXE001_1.py.snap
---
source: crates/ruff/src/rules/flake8_executable/mod.rs
expression: diagnostics
---
- kind:
    name: ShebangNotExecutable
    body: Shebang is present but file is not executable
    commit: ~
    fixable: false
  location:
    row: 1
    column: 2
  end_location:
    row: 1
    column: 17
  fix: ~
  parent: ~

