crates/ruff/src/rules/flake8_executable/snapshots/ruff__rules__flake8_executable__tests__EXE002_1.py.snap
---
source: crates/ruff/src/rules/flake8_executable/mod.rs
---
./resources/test/fixtures/flake8_executable/EXE002_1.py:1:1: EXE002 The file is executable but no shebang is present
  |
1 | if __name__ == '__main__':
  |  EXE002
2 |     print('I should be executable.')
  |


