crates/ruff/src/rules/flake8_executable/snapshots/ruff__rules__flake8_executable__tests__EXE003.py.snap
---
source: crates/ruff/src/rules/flake8_executable/mod.rs
---
./resources/test/fixtures/flake8_executable/EXE003.py:1:1: EXE003 Shebang should contain `python`
  |
1 | #!/usr/bin/bash
  | ^^^^^^^^^^^^^^^ EXE003
2 | print("hello world")
  |


