crates/ruff/src/rules/flake8_executable/snapshots/ruff__rules__flake8_executable__tests__EXE004_1.py.snap
---
source: crates/ruff/src/rules/flake8_executable/mod.rs
---
./resources/test/fixtures/flake8_executable/EXE004_1.py:1:1: EXE004 [*] Avoid whitespace before shebang
  |
1 |     #!/usr/bin/python
  | ^^^^ EXE004
  |
  = help: Remove whitespace before shebang

ℹ Suggested fix
1   |-    #!/usr/bin/python
  1 |+#!/usr/bin/python


