crates/ruff/src/rules/flake8_executable/snapshots/ruff__rules__flake8_executable__tests__EXE004_3.py.snap
---
source: crates/ruff/src/rules/flake8_executable/mod.rs
expression: diagnostics
---
- - kind:
      name: ShebangMissingExecutableFile
      body: The file is executable but no shebang is present
      suggestion: ~
      fixable: false
    location:
      row: 1
      column: 0
    end_location:
      row: 1
      column: 0
    fix: ~
    parent: ~

