crates/ruff/src/rules/flake8_executable/snapshots/ruff__rules__flake8_executable__tests__EXE004_4.py.snap
---
source: crates/ruff/src/rules/flake8_executable/mod.rs
---
EXE004_4.py:1:1: EXE004 [*] Avoid whitespace before shebang
  |
1 | / 
2 | |     #!/usr/bin/env python
  | |____^ EXE004
  |
  = help: Remove whitespace before shebang

ℹ Fix
1   |-
2   |-    #!/usr/bin/env python
  1 |+#!/usr/bin/env python


