crates/ruff/src/rules/flake8_executable/snapshots/ruff__rules__flake8_executable__tests__EXE005_1.py.snap
---
source: crates/ruff/src/rules/flake8_executable/mod.rs
expression: diagnostics
---
- kind:
    name: ShebangNewline
    body: Shebang should be at the beginning of the file
    commit: ~
    fixable: false
  location:
    row: 3
    column: 2
  end_location:
    row: 3
    column: 17
  fix: ~
  parent: ~

