crates/ruff/src/rules/flake8_executable/snapshots/ruff__rules__flake8_executable__tests__EXE005_3.py.snap
---
source: crates/ruff/src/rules/flake8_executable/mod.rs
---
./resources/test/fixtures/flake8_executable/EXE005_3.py:6:3: EXE005 Shebang should be at the beginning of the file
  |
6 | """
7 | # A python comment
8 | #!/usr/bin/python
  |   ^^^^^^^^^^^^^^^ EXE005
  |


